force-app/main/default/objects/CC__c/CC__c.object-meta.xml
<CustomObject>
    <label>CC</label>
    <nameField>
        <label>CC Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>