force-app/main/default/objects/CC__c/fields/AA__c.field-meta.xml
<CustomField>
    <fullName>AA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AA</label>
    <referenceTo>AA__c</referenceTo>
    <relationshipLabel>CC</relationshipLabel>
    <relationshipName>CC</relationshipName>
    <type>Lookup</type>
</CustomField>