force-app/main/default/objects/CC__c/fields/BB__c.field-meta.xml
<CustomField>
    <fullName>BB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BB</label>
    <referenceTo>BB__c</referenceTo>
    <relationshipLabel>CC</relationshipLabel>
    <relationshipName>CC</relationshipName>
    <type>Lookup</type>
</CustomField>