force-app/main/default/objects/CC__c/fields/mydate__c.field-meta.xml
<CustomField>
    <fullName>mydate__c</fullName>
    <label>mydate</label>
    <type>Date</type>
</CustomField>